--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+no<!DOCTYPE html>
 <!-- Notice the ng-app Angular directive. This tells Angular where the application starts and also
 which module to associate the app with. In app.js we create the "dinnerPlanner" module. -->
 <html lang="en" ng-app="app">
@@ -24,6 +24,8 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/angular-resource/angular-resource.js"></script>
+  <script src="/bower_components/angular-animate/angular-animate.js"></script>
+  <script src="/bower_components/angular-touch/angular-touch.js"></script>
   <!-- The application JavaScript code -->
   <script src="app.js"></script>
   <script src="partials/dayView/dayCtrl.js"></script>
